# NXP_AIM_self-driving-car

./: readme.md  spawn_light.py
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
nxp.gitbook.io/cdn-cgi/l/: email-protection.html
nxp.gitbook.io/nxp-aim/: adding-obstacles.html  grand_finale_track.html  important-modification-in-setup.html  important-updates-post-qualification-round.html  index.html  installation-of-nxp-gazebo.html  installation-of-ubuntu-ver20.04.html  overview-of-example-code.html  overview-of-the-nxp-gazebo-stack.html  pre-finale-round-track.html  prefinale_world.html  qualification-round-track.html  running-nxp-gazebo.html  sample-world-grand-finale.html  sample-world.html  updating-car-physics.html
nxp_gazebo/: README.md
nxp_gazebo/custom_pluggins/car_animation/: CMakeLists.txt  animated_car.cc
nxp_gazebo/custom_pluggins/person_animation_x_dir/: CMakeLists.txt  animated_person_xDir.cc
nxp_gazebo/custom_pluggins/person_animation_y_dir/: CMakeLists.txt  animated_person_yDir.cc
nxp_gazebo/frontcam/: frontcam.sdf  frontcam.sdf.jinja  model.config
nxp_gazebo/models/Construction_Cone_mini/: model.config  model.sdf
nxp_gazebo/models/Gas_Station2/: model.config  model.sdf
nxp_gazebo/models/Grand_Finale_Track/: model (copy).sdf  model.config  model.sdf  model_old.sdf
nxp_gazebo/models/House_mini/: model.config  model.sdf
nxp_gazebo/models/Raceway2/: model.config  model.sdf
nxp_gazebo/models/Raceway_1/: model.config  model.sdf
nxp_gazebo/models/Speed_limit_2/: model.config  model.sdf
nxp_gazebo/models/ambulance_mini/: model.sdf
nxp_gazebo/models/banner_1/: model.config  model.sdf
nxp_gazebo/models/banner_2/: model.config  model.sdf
nxp_gazebo/models/barricade/: model.config  model.sdf
nxp_gazebo/models/bus_mini/: model.config  model.sdf
nxp_gazebo/models/car/: model.sdf
nxp_gazebo/models/car_blue/: model.sdf
nxp_gazebo/models/car_red/: model.sdf
nxp_gazebo/models/dumpster2/: model.sdf
nxp_gazebo/models/fast_food_mini/: model.sdf
nxp_gazebo/models/finish_line/: model.config  model.sdf
nxp_gazebo/models/fire_hydrant2/: model.sdf
nxp_gazebo/models/go_straight_sign/: model.config  (+1 more)
nxp_gazebo/nxp_cupcar/: exp_scale_nxp_cupcar.sdf.jinja  model.config  nxp_cupcar.sdf.jinja
nxp_gazebo/scripts/: cuprace_start.sh  cuprace_stop.sh  foxy_install.sh  jinja_model_gen.py  jinja_world_gen.py
nxp_gazebo/worlds/: gen.world.jinja
src/aim_line_follow/: .gitignore  README.md  setup.cfg  setup.py
src/nxp_cup_interfaces/: CMakeLists.txt  README.md
src/nxp_cup_vision/: README.md  package.xml  setup.cfg  setup.py
src/nxp_cup_vision/nxp_cup_vision/: avoid_threshold.txt  best_V5_N.pt  best_transferred_50N.pt  classes.txt  detector.py  nxp_track_vision.py
(+178 files in other folders)
