<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nxp_cup_vision</name>
  <version>0.0.1</version>
  <description>NXP Cup track vision ROS2.</description>
  <maintainer email="bperseghetti@rudislabs.com">Benjamin Perseghetti</maintainer>
  <author email="bperseghetti@rudislabs.com">Benjamin Perseghetti</author>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nxp_cup_interfaces</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
